Active results stored using the RESTAggregator